# dforum

./: .gitignore  Cargo.toml  LICENSE  README.md  bot.go  cache.go  config.example.toml  config.go  debug.go  discord.go  funcmap.go  go.mod  go.sum  imageproxy.go  main.go  message.go  ok.txt  server.go  sitemap-timings.txt  sitemap.go  strings.go
.github/: pull_request_template.md
.github/workflows/: ci.yml
database/: database.go  postgres.go
pages/: header.gohtml  index.gohtml  list.gohtml  message.gohtml  messages.gohtml  topics.gohtml
resources/: style.css
resources/static/: style.css
resources/templates/: cdnconsent.gohtml  error.gohtml  forum.gohtml  guild.gohtml  header.gohtml  icons.gohtml  index.gohtml  nav.gohtml  nsfw.gohtml  post.gohtml  privacy.gohtml  searchbar.html  searchforum.gohtml  searchguild.gohtml  tos.gohtml
src/: discord.rs  main.rs
wordsearch/: Cargo.toml  README.md
wordsearch/src/: main.rs
