[package]
name = "dforum"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
futures = "0.3.25"
gtmpl = "0.7.1"
hyper = { version = "0.14.23", features = ["server", "http1", "runtime"] }
lazy_static = "1.4.0"
regex = "1.7.1"
rust-embed = "6.4.2"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.5.10"
twilight = "0.14.0"
twilight-cache-inmemory = "0.14.1"
twilight-gateway = "0.14.0"
twilight-http = { default-features = false, features = ["rustls-native-roots", "simd-json"], version = "0.14.1" }
